RESOLVED FIXED35751
WAI-ARIA live region doesn't appear when <div> only has a <div> child
https://bugs.webkit.org/show_bug.cgi?id=35751
Summary WAI-ARIA live region doesn't appear when <div> only has a <div> child
chris fleizach
Reported 2010-03-04 10:47:44 PST
when you have <div aria-live=polite><div>a</div></div> the outer div is accessibilityIgnored
Attachments
Patch (7.80 KB, patch)
2010-03-04 11:37 PST, chris fleizach
no flags
chris fleizach
Comment 1 2010-03-04 11:37:12 PST
Eric Seidel (no email)
Comment 2 2010-03-05 13:12:31 PST
Comment on attachment 50041 [details] Patch OK.
WebKit Commit Bot
Comment 3 2010-03-05 22:45:37 PST
Comment on attachment 50041 [details] Patch Clearing flags on attachment: 50041 Committed r55611: <http://trac.webkit.org/changeset/55611>
WebKit Commit Bot
Comment 4 2010-03-05 22:45:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.