2010-03-05  Chris Fleizach  <cfleizach@apple.com>

Reviewed by Eric Seidel.

        WAI-ARIA live region doesn't appear when <div> only has a <div> child
        https://bugs.webkit.org/show_bug.cgi?id=35751

        * platform/mac/accessibility/div-containing-div-with-aria-expected.txt: Added.
        * platform/mac/accessibility/div-containing-div-with-aria.html: Added.
2010-03-05  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Eric Seidel.

        WAI-ARIA live region doesn't appear when <div> only has a <div> child
        https://bugs.webkit.org/show_bug.cgi?id=35751

        Elements should not be ignored if they carry ARIA attributes in them.

        Test: platform/mac/accessibility/div-containing-div-with-aria.html

        * accessibility/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::supportsARIAAttributes):
        * accessibility/AccessibilityObject.h:
        (WebCore::AccessibilityObject::supportsARIADropping):
        (WebCore::AccessibilityObject::supportsARIADragging):
        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::supportsARIADropping):
        (WebCore::AccessibilityRenderObject::supportsARIADragging):
        (WebCore::AccessibilityRenderObject::accessibilityIsIgnored):
        * accessibility/AccessibilityRenderObject.h:

Canonical link: https://commits.webkit.org/46908@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55611 268f45cc-cd09-0410-ab3c-d52691b4dbfc