WebCore/accessibility/AccessibilityObject.h
@@ -347,8 +347,8 @@ public:
     virtual void ariaFlowToElements(AccessibilityChildrenVector&) const { }
     
     // ARIA drag and drop
-    virtual bool supportsARIADropping() { return false; }
-    virtual bool supportsARIADragging() { return false; }
+    virtual bool supportsARIADropping() const { return false; }
+    virtual bool supportsARIADragging() const { return false; }
     virtual bool isARIAGrabbed() { return false; }
     virtual void setARIAGrabbed(bool) { }
     virtual void determineARIADropEffects(Vector<String>&) { }
@@ -518,6 +518,8 @@ public:
     virtual const AtomicString& ariaLiveRegionRelevant() const { return nullAtom; }
     virtual bool ariaLiveRegionAtomic() const { return false; }
     virtual bool ariaLiveRegionBusy() const { return false; }
+    
+    bool supportsARIAAttributes() const;
     
 #if HAVE(ACCESSIBILITY)
 #if PLATFORM(GTK)
